# fred-linux-client-lib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dbg_print.h  demo_hw_task.c  demo_hw_task.h  fred_lib.c  fred_lib.h  fred_parameters.h  fredcpp.h  main.c  periodic_task.c  periodic_task.h
fred_support/: CMakeLists.txt  dbg_print.h  fred_buff.c  fred_buff.h  fred_lib.c  fred_lib.h  fred_msg.h  fred_parameters.h  user_buff.c  user_buff.h
